# paresse

./: Cargo.toml  LICENSE
crates/bitset/src/: bitset_like.rs  lib.rs
crates/bitset/src/ops/: difference.rs  intersection.rs  mod.rs  union.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: grammar.rs  hir.rs  lib.rs  parse.rs  raw_grammar.rs
crates/codegen/src/generate/: lexer.rs
crates/codegen/src/generate/parsers/: ll1.rs
crates/either/: Cargo.toml
crates/either/src/: lib.rs
crates/grammar/: Cargo.toml
crates/grammar/src/: cfg.rs  symbol.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: alphabet.rs  ast.rs  dfa.rs  lib.rs  parser.rs
crates/paresse-codegen/: Cargo.toml
crates/paresse-codegen/src/: config.rs  hir.rs  lib.rs  parse.rs
crates/paresse-codegen/src/generate/: lexer.rs
crates/paresse-core/: Cargo.toml
crates/paresse-core/src/: either.rs  error.rs  lib.rs
crates/paresse-core/src/bitset/: bitset_like.rs  blocks_iter.rs  mod.rs
crates/paresse-core/src/grammar/: cfg.rs  lr_items.rs  mod.rs  rule.rs  symbol.rs
crates/paresse-core/src/lexer/: ast.rs  (+6 more)
crates/parsers/: Cargo.toml
crates/parsers/src/: ll1.rs
examples/calc/: Cargo.toml
examples/calc_lr/: Cargo.toml
examples/calc_lr/src/: main.rs
examples/ll1/: Cargo.toml
examples/ll1/src/: main.rs
src/: bitset.rs  either.rs  lib.rs  main.rs
src/bitset/: bitset_like.rs  mod.rs
src/bitset/ops/: difference.rs  intersection.rs  union.rs
src/grammar/: cfg.rs  mod.rs  rule.rs  symbol.rs
src/lexer/: alphabet.rs  ast.rs  mod.rs
src/parsers/: ll1.rs
tests/: misc.rs
(+24 files in other folders)
