[package]
name = "paresse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parser generators for lazy people"
repository = "https://github.com/MarinPostma/paresse"
readme = "README.md"

[dependencies]
paresse-core = { path = "crates/paresse-core" }
paresse-codegen = { path = "crates/paresse-codegen" }

[workspace]
resolver = "2"
members = [
    "crates/paresse-core",
    "crates/paresse-codegen",
]
exclude = [
    "examples/calc",
    "examples/calc_lr",
]
