[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.79", features = ["parsing", "printing", "full"] }
lexer = { path = "../lexer/" }
grammar = { path = "../grammar/" }
proc-macro2 = "1.0.88"
bitset = { path = "../bitset" }

[lib]
proc-macro = true
